# scicc_mw

./: CMakeLists.txt  README.md  build.sh  local_build.sh  run.sh
common/: CMakeLists.txt
common/include/: log.h  platform_types.h  std_types.h
mw/: CMakeLists.txt
mw/include/: mw_queue_types.h  mw_queue_types_Cfg.h
mw/src/: main.c  mw.c  mw.h  mw_Cfg.h  mw_sci_cc.h
sci_cc/: CMakeLists.txt
sci_cc/include/: sci_cc.h  sci_cc_call.h
sci_cc/src/: sci_cc.c  sci_cc_Cfg.h  sci_cc_Lcfg.c
